# FindJobo

./: .gitignore  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
findjobo/: asgi.py  settings.py  urls.py  wsgi.py
findjoboapp/: admin.py  apps.py  models.py  views.py
findjoboapp/migrations/: 0001_initial.py  0002_job_expiry_date.py  0002_job_id_alter_job_city.py  0003_alter_job_city.py  0004_alter_job_category_alter_job_city.py  0005_job_application_url.py
findjoboapp/templates/: index.html  logout-screen.html  privacy-policy.html  terms-of-service.html
findjoboapp/templates/account/: login.html
static/: style.css
staticfiles/: script.js  staticfiles.json  style.css
