[project]
name = "findjobo"
version = "0.1.0"
description = "findjobo application"
authors = [
    {name = "Bryan Wandera", email="w_bryan@outlook.com"},
    {email = "info@example.com"}
]

readme = "README.md"
requires-python = ">=3.6"

keywords = ["packaging", "dependency", "infer", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

# Requirements: This is done differently by poetry!
dependencies = [
    "Click>=7.0"
    "asgiref==3.5.2"
    "dj-database-url==1.0.0"
    "Django==4.1.3"
    "django-admin-relation-links==0.2.5"
    "django-referrer-policy==1.0"
    "django-richtextfield==1.6.1"
    "gunicorn==20.1.0"
    "Pillow==9.3.0"
    "psycopg2-binary==2.9.5"
    "sqlparse==0.4.3"
    "whitenoise==6.2.0"
]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]


[project.scripts]
poetry = "infer_pyproject.cli:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
include = '\.pyi?$'
exclude = '''

